@@ -18,3 +18,4 @@ Sergei Shnaidman <sergei.shnaidman@qik.com>
 Alex <alex2048@gmail.com>
 Gary Fitts <gary@intouchgroup.com> - major contribution of URL-template and others
 Frank_Migge <Frank_Migge@manulife.com>
+jari pietila <jari2004@hotmail.com>
